Added grid and total box

--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<section class="display">
+    <div class="total">0</div>
+<section class="calc">
+    <div class="numbers">
+        <button class="number1">7</button>
+        <button class="number2">8</button>
+        <button class="number3">9</button>
+        <button class="number4">4</button>
+        <button class="number5">5</button>
+        <button class="number6">6</button>
+        <button class="number7">1</button>
+        <button class="number8">2</button>
+        <button class="number9">3</button>
+        <button class="number0">0</button>
+    </div>
+    <div class="operators">
+        <button class="add"> + </button>
+        <button class="equal"> = </button>
+    </div>
+</section>
+</section>
+
+
 <script src="script.js"></script>
 </body>
 </html>
