Fixed the setOperation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <section class="display">
-    <div class="total">0</div>
+    <output class="output">0</output> 
 <section class="calc">
     <div class="numbers">
         <button class="number1">7</button>
@@ -24,7 +24,7 @@
         <button class="number0">0</button>
     </div>
     <div class="operators">
-        <button class="add"> + </button>
+        <button class="operand">+</button>
         <button class="equal"> = </button>
     </div>
 </section>
