--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <section class="display">
+    <div class="screen">
+    <output class="secondOutput"></output>
     <output class="output">0</output> 
+    </div>
 <section class="calc">
     <div class="numbers">
         <button class="number1">7</button>
@@ -24,6 +27,10 @@
         <button class="number0">0</button>
     </div>
     <div class="operators">
+        <button class="clear">Clear</button>
+        <button class="operand">*</button>
+        <button class="operand">/</button>
+        <button class="operand">-</button>
         <button class="operand">+</button>
         <button class="equal"> = </button>
     </div>
